--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,16 @@
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "^6.*|^7.0.1"
+        "guzzlehttp/guzzle": "^7.0.1"
     },
     "autoload": {
         "psr-4": {
             "Baraveli\\BMLTransaction\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5",
+        "symfony/var-dumper": "^5.2",
+        "vlucas/phpdotenv": "^5.2"
     }
 }
